feat: sga_documentarion issue #11-Componente de lista de proyectos: listo

--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+            ],
             "customWebpackConfig": {
               "path": "extra-webpack.config.js",
               "libraryName": "sga-cliente-proyecto-curricular-mf",
