--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@angular/router": "^16.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
+    "@popperjs/core": "^2.11.8",
     "angular2-toaster": "^11.0.1",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "ng2-date-picker": "^17.0.0",
