--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "ng2-date-picker": "^17.0.0",
+    "nuxeo": "^4.0.3",
     "rxjs": "~7.8.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^9.0.1",
