--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rxjs": "~7.8.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^9.0.1",
+    "spinner-util": "^0.0.2",
     "sweetalert2": "^11.10.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
