--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.8",
+    "@sweetalert2/themes": "^5.0.16",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
