--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build:single-spa:sga-cliente-proyecto-curricular-mf": "ng build sga-cliente-proyecto-curricular-mf --configuration production",
-    "serve:single-spa:sga-cliente-proyecto-curricular-mf": "ng s --project sga-cliente-proyecto-curricular-mf --disable-host-check --port 4204 --live-reload false"
+    "serve:single-spa:sga-cliente-proyecto-curricular-mf": "ng s --project sga-cliente-proyecto-curricular-mf --disable-host-check --port 4204 --live-reload false",
+    "build:prod": "ng build --progress --configuration=production",
+    "build:test": "ng build --progress --configuration=development"
   },
   "private": true,
   "dependencies": {
