feat: Actualizar configuración de Angular.json udistrital/sga_documentacion#234

--- a/angular.json
+++ b/angular.json
@@ -75,6 +75,13 @@
               "deployUrl": "https://pruebassgaproyectocurricular.portaloas.udistrital.edu.co/"
             },
             "local": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "outputHashing": "none",
               "deployUrl": "http://localhost:4204/"
             }
           },
