--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "prepare": "husky",
     "build:single-spa:sga-cliente-proyecto-curricular-mf": "ng build sga-cliente-proyecto-curricular-mf --configuration production",
     "serve:single-spa:sga-cliente-proyecto-curricular-mf": "ng s --project sga-cliente-proyecto-curricular-mf --disable-host-check --port 4204 --live-reload false",
     "build:prod": "ng build --progress --configuration=production",
@@ -48,12 +49,14 @@
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "husky": "^9.0.11",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "simple-git": "^3.24.0",
     "style-loader": "^3.3.1",
     "typescript": "~5.0.2"
   }
